Bug 153466 - Slide imported from PPTX with custom sized background image. When opened in Impress it loses the settings and changes from tile to stretched.
Summary: Slide imported from PPTX with custom sized background image. When opened in I...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks: PPTX-Images
  Show dependency treegraph
 
Reported: 2023-02-08 13:03 UTC by NISZ LibreOffice Team
Modified: 2023-08-21 19:38 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample file (4.27 MB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2023-02-08 13:04 UTC, NISZ LibreOffice Team
Details
Screenshot of the problem (1.28 MB, image/png)
2023-02-08 13:04 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2023-02-08 13:03:27 UTC
Description:
A PPTX slide is a custom sized background with the value "tile" in the backgroundsetting. After importing into Impress, it will change the "tile" value to "stretched", so it will lose the preset size.

Steps to Reproduce:
1: Open the attached PPTX file.
2: Make sure the set size has been changed.

Actual Results:
The set background size will change.

Expected Results:
The value set in PPTX will be preserved.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ec4babad021218b75dfe8534985d7db525edde69
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2023-02-08 13:04:10 UTC
Created attachment 185210 [details]
Sample file
Comment 2 NISZ LibreOffice Team 2023-02-08 13:04:35 UTC
Created attachment 185211 [details]
Screenshot of the problem
Comment 3 Commit Notification 2023-03-27 08:33:32 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a41dbf0bd726613204d975fb4fc5e50c23d61410

tdf#153466 PPTX import: fix "Custom position/size" background image

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 NISZ LibreOffice Team 2023-03-28 08:12:58 UTC
Verified in:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4daeb21a5f533144fd6b3bc397a98f37e5b1dd4c
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 5 Timur 2023-05-29 14:23:28 UTC
Please backport to 7.5. Thank you.